fix for overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,8 +9,8 @@
   outline: none;
 }
 
-body {
-  overflow-y: none;
+html, body {
+  overflow-x: hidden !important;
 }
 
 p {
